# OpenGL

./: Utils.h  lab13.cpp  lab13.cs  lab14.cpp  lab14_2.cpp
lab12/: .gitignore  lab12.vcxproj  lab12.vcxproj.filters  main.cpp  main.h  shaders.h
lab14/: CMakeLists.txt  Makefile  Utils.h  lab14  main.cpp
